--- a/06-Modal/starter/index.html
+++ b/06-Modal/starter/index.html
@@ -14,7 +14,7 @@
 
     <div class="modal hidden">
       <button class="close-modal">&times;</button>
-      <h1>I'm a modal window 😍</h1>
+      <h1>I'm a modal winow 😍</h1>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
